--- a/tipc2/README
+++ b/tipc2/README
@@ -10,17 +10,17 @@ when it's passed early in the command chain like "ip addr help". But when
 the user tries to pass "help" further down this requires manual checks and
 special treatment. For example, at the time of writing this tool, it's
 possible to create a vlan named "help" with the ip tool, but it's impossible
-to remove it, the command just shows help. This is an effect of threating
+to remove it, the command just shows help. This is an effect of treating
 bare words specially.
 
-Help text are not dynamically generated. That is, we do not pass datastructures
+Help texts are not dynamically generated. That is, we do not pass datastructures
 like command list or option lists and print them dynamically. This is
 intentional. There is always that exception and when it comes to help texts
-these exception are normally neglected at the expence of usability.
+these exceptions are normally neglected at the expence of usability.
 
 KEY-VALUE
 ~~~~~~~~~
-All options are key-values. There is both drawbacks and benefits to this.
+All options are key-values. There are both drawbacks and benefits to this.
 The main drawback is that it becomes more to write for the user and
 information might seem redundant. The main benefits is scalability and code
 simplification. Consistency is important.
@@ -29,8 +29,8 @@ Consider this.
 1. tipc link set priority PRIO link LINK
 2. tipc link set LINK priority PRIO
 
-Link might seem redundant in 1. However, if the command should live for many
-years and be able to evolve 2. limits the set command to only work on a
+Link might seem redundant in (1). However, if the command should live for many
+years and be able to evolve example (2) limits the set command to only work on a
 single link with no ability to extend. As an example, lets say we introduce
 grouping on the kernel side.
 
@@ -59,5 +59,5 @@ memory allocations are on the stack.
 RETURNING
 ~~~~~~~~~
 The tool could throw exit() deep down in functions but doing so always seems
-to limit the program in the long run. So we output the erorr and return a
+to limit the program in the long run. So we output the error and return an
 appropriate error code upon failure.
